fixed alignment, added more error handlers for position, and setup for clean data. added the ability to change and render different categories. added basic search bar that will display post information.

--- a/src/features/Home/home.css
+++ b/src/features/Home/home.css
@@ -4,18 +4,24 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex-grow: 1;
     overflow: hidden;
+    width: 60%;
+    margin: 2px auto;
 }
 
+
 .redditBox {
-        display: flex;
-    flex-direction: column;
+display: flex;
+flex-direction: column;
     align-items: center;
-    justify-content: center;
-    border-top: 1px solid rgb(112, 112, 112);
-    border-bottom: 1px solid rgb(112, 112, 112);
-    width: 60%;
-    margin: 1px 0px;
+    border: 2px solid rgb(112, 112, 112);
+    width: 100%;
+    max-height: 1000px;
+}
+
+.redditBox:hover {
+    background-color: rgb(237, 237, 237);
 }
 
 .redditBox p {
@@ -27,16 +33,16 @@
     width: 25px;
     cursor: pointer;
 }
-
-.redditBox img{
-object-fit: contain;
-width: 100%;
+.displayName {
+    background-color: rgb(212, 211, 211);
+    width: 100%;
 }
 
-.redditBox video{
+.redditBox img, .redditBox video{
 object-fit: contain;
-width: 100%;
 }
+
+
 
 .voteButtons {
     display: flex;
